# zoho-books-cli

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MIGRATION.md  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
bench/: README.md  capture_schemas.py  measure_static.py  results_summary.json  results_summary_static.json  run_eval.py  summarize.py  tasks.py
bench/cli-latency/: RESULTS.md  run.sh
bench/fixtures/: zoho_mcp_schemas.json
bench/fixtures/synthetic/: README.md  contacts_list.mcp.json  contacts_list.zb.json  org_get.mcp.json  org_get.zb.json
scripts/: blocked_identifiers.example.txt  check_no_personal_data.py
skills/zoho-books/: SKILL.md
src/: auth.rs  cli.rs  client.rs  config.rs  errors.rs  main.rs  output.rs  regions.rs  shared.rs  storage.rs  uploads.rs
src/commands/: auth_cmd.rs  bank_rules.rs  bank_transactions.rs  bills.rs  chart_of_accounts.rs  common.rs  contacts.rs  customer_payments.rs  documents.rs  expenses.rs  invoices.rs  mod.rs  org.rs  projects.rs  raw.rs  recurring_expenses.rs  recurring_invoices.rs
src/zoho_books_cli/: __main__.py  _uploads.py  auth.py  cli.py  client.py  config.py  errors.py  output.py  regions.py  storage.py
src/zoho_books_cli/commands/: _shared.py  auth.py  bank_account_rules.py  bank_transactions.py  bills.py  chart_of_accounts.py  contacts.py  customer_payments.py  expenses.py  invoices.py  org.py  projects.py  raw.py  recurring_expenses.py  recurring_invoices.py
src/zoho_books_cli_legacy/: __init__.py  cli.py
tests/: conftest.py  test_auth.py  test_bank_account_rules.py  test_bank_transactions.py  test_bills.py  test_chart_of_accounts.py  test_client.py  test_contacts.py  test_customer_payments.py  test_dry_run.py  test_expenses_crud.py  test_expenses_upload.py  test_invoices.py  test_org.py  test_output_format.py  test_page_all.py  test_params_flag.py  test_projects.py  test_recurring_expenses.py  test_recurring_invoices.py  test_regions.py  test_shared_helpers.py  test_uploads.py
