[package]
name = "zoho-books-cli"
version = "1.0.0"
edition = "2024"
rust-version = "1.85"
description = "Agent-first CLI for Zoho Books, filling gaps the official MCP can't cover (notably binary file uploads)."
license = "MIT"
readme = "README.md"
repository = "https://github.com/madisonrickert/zoho-books-cli"
authors = ["Madison Rickert <3495636+madisonrickert@users.noreply.github.com>"]
categories = ["command-line-utilities"]
keywords = ["zoho", "books", "accounting", "cli", "api"]
# Keep cargo package / publish output focused on the Rust crate. The Python
# deprecation shim, bench harness, and GitHub Actions live in this repo for
# convenience but aren't part of the binary.
exclude = [
    "pyproject.toml",
    "src/zoho_books_cli_legacy/",
    "bench/",
    ".github/",
    "skills/",
    "scripts/",
    ".pre-commit-config.yaml",
    ".python-version",
    ".secrets.baseline",
    "MIGRATION.md",
    "CONTRIBUTING.md",
]

[[bin]]
name = "zb"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "wrap_help", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "multipart", "json"] }
tiny_http = "0.12"
keyring = "4"
keyring-core = "1"
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value", "preserve_order", "arbitrary_precision"] }
serde_yml = "0.0.12"
csv = "1"
thiserror = "2"
tempfile = "3"
url = "2"
rand = "0.10"

[dev-dependencies]
mockito = "1"
assert_cmd = "2"
predicates = "3"
insta = { version = "1", features = ["json"] }

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"
