[package]
name = "zoho-books-cli"
version = "1.0.1"
edition = "2024"
rust-version = "1.85"
description = "Agent-first CLI for Zoho Books, filling gaps the official MCP can't cover (notably binary file uploads)."
license = "MIT"
readme = "README.md"
repository = "https://github.com/madisonrickert/zoho-books-cli"
authors = ["Madison Rickert <3495636+madisonrickert@users.noreply.github.com>"]
categories = ["command-line-utilities"]
keywords = ["zoho", "books", "accounting", "cli", "api"]
# Keep cargo package / publish output focused on the Rust crate. The Python
# deprecation shim, bench harness, and GitHub Actions live in this repo for
# convenience but aren't part of the binary.
exclude = [
    "pyproject.toml",
    "src/zoho_books_cli_legacy/",
    "bench/",
    ".github/",
    "skills/",
    "scripts/",
    ".pre-commit-config.yaml",
    ".python-version",
    ".secrets.baseline",
    "MIGRATION.md",
    "CONTRIBUTING.md",
]

[[bin]]
name = "zb"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "wrap_help", "env"] }
reqwest = { version = "0.13", default-features = false, features = ["blocking", "rustls", "webpki-roots", "multipart", "json", "form", "query"] }
tiny_http = "0.12"
keyring-core = "1"
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value", "preserve_order", "arbitrary_precision"] }
serde_yml = "0.0.12"
csv = "1"
thiserror = "2"
tempfile = "3"
url = "2"
rand = "0.10"

# Platform-specific keyring backends. Per the keyring-rs README, applications
# shouldn't depend on the `keyring` crate directly (it's now sample code that
# bundles every backend, including SQLite/turso which we don't use). Instead
# we pull only the per-platform store we need. The macOS store uses its
# `keychain` feature module for v3-compatible storage shape — required for
# drop-in reads of credentials written by the Python implementation.
[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = { version = "1", features = ["keychain"] }

[target.'cfg(target_os = "linux")'.dependencies]
dbus-secret-service-keyring-store = "1"

[dev-dependencies]
mockito = "1"
assert_cmd = "2"
predicates = "3"
insta = { version = "1", features = ["json"] }

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"
