[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zoho-books-cli"
version = "0.5.0"
description = "Agent-first CLI for Zoho Books, filling gaps the official MCP can't cover (notably binary file uploads)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Madison Rickert", email = "m@madisonrickert.com" }]
keywords = ["zoho", "zoho-books", "cli", "accounting", "receipts", "agents", "mcp"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Office/Business :: Financial :: Accounting",
]
dependencies = [
  "typer>=0.12",
  "httpx>=0.27",
  "keyring>=25",
  "platformdirs>=4",
  "pyyaml>=6",
]

[project.optional-dependencies]
pretty = ["rich>=13"]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "respx>=0.21",
  "ruff>=0.6",
  "pre-commit>=3.7",
  "detect-secrets>=1.5",
  "rich>=13",
]
# Token-cost benchmark deps (zb CLI vs Zoho Books MCP). See bench/README.md.
# The live arm shells out to `claude -p` (subscription auth); only the
# static arm hits the metered API directly via `anthropic.count_tokens`.
bench = [
  "anthropic>=0.40",
  "mcp>=1.2",
]

[project.urls]
Homepage = "https://github.com/madisonrickert/zoho-books-cli"
Issues = "https://github.com/madisonrickert/zoho-books-cli/issues"
Source = "https://github.com/madisonrickert/zoho-books-cli"

[project.scripts]
zb = "zoho_books_cli.cli:main"
zoho-books = "zoho_books_cli.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/zoho_books_cli"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B", "SIM"]
# Typer requires typer.Option / typer.Argument calls in parameter defaults; B008 is incorrect for CLI files.
"src/zoho_books_cli/commands/*.py" = ["B008"]
"src/zoho_books_cli/cli.py" = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers"
