[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zoho-books-cli"
version = "0.6.0"
description = "DEPRECATED — moved to a Rust binary. Reinstall via `brew install madisonrickert/tap/zoho-books-cli`. See MIGRATION.md."
readme = "MIGRATION.md"
license = { text = "MIT" }
authors = [{ name = "Madison Rickert", email = "3495636+madisonrickert@users.noreply.github.com" }]
requires-python = ">=3.11"
dependencies = []
keywords = ["zoho", "books", "deprecated", "migration"]
classifiers = [
    "Development Status :: 7 - Inactive",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/madisonrickert/zoho-books-cli"
Migration = "https://github.com/madisonrickert/zoho-books-cli/blob/main/MIGRATION.md"

[project.scripts]
zb = "zoho_books_cli_legacy.cli:main"
zoho-books = "zoho_books_cli_legacy.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/zoho_books_cli_legacy"]
